test/extern/multilocale/externRemoteRecord2.good
foo got: 42
externRemoteRecord2.chpl:14: error: references to remote data cannot be passed to external routines like 'bar'
